# ticket-manager

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a73e9774062b_initial_migration.py
backend/app/: auth.py  database.py  main.py
backend/app/schemas/: tickets.py  users.py
backend/app/service/: __init__.py  tickets.py  users.py
backend/tests/: conftest.py  test_main.py
backend/tests/test_service/: test_tickets.py  test_users.py
frontend/: .env.example  Dockerfile  README.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: FilterBar.tsx  LoginForm.tsx  Pagination.tsx  TicketForm.tsx  TicketTable.tsx
frontend/lib/: api.ts  hooks.ts
frontend/nginx/: entrypoint.sh  nginx.conf.template
